--- a/package.json
+++ b/package.json
@@ -1,34 +1,22 @@
 {
-  "name": "lerna-repo",
-  "version": "0.1.0",
+  "name": "root",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+  "devDependencies": {
+    "@react-workspaces/react-scripts": "^3.0.1-alpha-07",
+    "lerna": "^3.15.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
   },
+  "workspaces": [
+    "packages/**"
+  ],
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "internet": "cd packages/internet-banking && yarn start",
+    "mobile": "cd packages/mobile-banking && yarn start",
+    "build": "lerna run build",
+    "clean": "yarn clean:artifacts && yarn clean:packages && yarn clean:root",
+    "clean:artifacts": "lerna run clean --parallel",
+    "clean:packages": "lerna clean --yes",
+    "clean:root": "rm -rf node_modules"
   }
 }
